sandc/test/fixtures/astRegression/shouldSucceed/productions/classDeclaration/ClassBodyUseStatements.sand
pub class ClassBodyUseStatements {
    use foo as bar;
    use bar.qux;
    use all.*;
}