sandc/test/fixtures/astRegression/shouldFail/productions/statement/WhilePseudex.sand
pub class WhilePseudex {
    foo() {
        while cond {
            foo();
            a
        }
    }
}